--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="profile-image"></div>
         <h1>dill</h1>
         <p>luau, py, js</p>
-        <h2>dilly.in</h2>
+        <h2>site owner - discord.gg/fastly on top</h2>
     </div>
 </body>
 </html>
