--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         .profile-box {
             text-align: center;
             color: white;
+            font-family: Arial, sans-serif;
         }
         
         .profile-image {
