--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
             background-position: center;
             margin: 0 auto;
         }
+        
+        .discord-button {
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
@@ -34,6 +38,9 @@
         <h1>dill</h1>
         <p>luau, py, js</p>
         <h2>site owner - discord.gg/fastly on top</h2>
+        <a class="discord-button" href="https://discord.com/users/924801632133349457">
+            <img src="https://i.pinimg.com/originals/4d/34/20/4d3420a4f1a5e94295ef681adc541b1c.jpg" alt="Discord Button">
+        </a>
     </div>
 </body>
 </html>
