--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p>luau, py, js</p>
         <h2>site owner - discord.gg/fastly on top</h2>
         <a class="discord-button" href="https://discord.com/users/924801632133349457">
-            <img src="https://i.pinimg.com/originals/4d/34/20/4d3420a4f1a5e94295ef681adc541b1c.jpg" alt="Discord Button">
+            <img src="https://cdn.discordapp.com/attachments/1167844889296384060/1168158189229985863/4d3420a4f1a5e94295ef681adc541b1c-removebg-preview.png?ex=6550bf17&is=653e4a17&hm=e5c7b1ef64d229a59d03d116e276add378e01af9f4ebd92b0cc01c2a1af49401&" alt="Discord Button">
         </a>
     </div>
 </body>
