--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         }
         
         .discord-button img {
-            width: 50px;
-            height: 50px;
-            background: none; /* Remove the background */
+            width: 100px; 
+            height: 50px; 
+            background: none;
         }
     </style>
 </head>
